src/compiler/parse/snapshots/rlox__compiler__parse__parser__errors__brackets_mandatory.snap
---
source: src/compiler/parse/parser.rs
expression: "crate::common::test_util::mock_parse(\"\n        if (true) print 1;\n        \")"
---
stderr:
Error: Parse error
   ╭─[<unknown>:2:12]
   │
 2 │         if (true) print 1;
   │                   ──┬──  
   │                     ╰──── Expected {
───╯


