src/compiler/parse/snapshots/rlox__compiler__parse__parser__errors__declaration_is_not_expression.snap
---
source: src/compiler/parse/parser.rs
expression: "crate::common::test_util::mock_parse(\"var a == 1;\")"
---
stderr:
Error: 
   ╭─[<unknown>:?:?]
   │
 1 │ var a == 1;
   │ ─┬─   ─┬  
   │  ╰──────── This statement should be terminated with ;
   │        │  
   │        ╰── Expected ;
───╯


