src/compiler/parse/snapshots/rlox__compiler__parse__parser__errors__global_declaration_without_identifier.snap
---
source: src/compiler/parse/parser.rs
expression: "crate::common::test_util::mock_parse(\"\n        var 1;\n        \")"
---
stderr:
Error: Parse error
   ╭─[<unknown>:2:12]
   │
 2 │         var 1;
   │             ┬  
   │             ╰── Expected identifier
───╯


