src/compiler/parse/snapshots/rlox__compiler__parse__parser__errors__invalid_declaration.snap
---
source: src/compiler/parse/parser.rs
expression: "crate::common::test_util::mock_parse(\"\n        var a = var b;\n        \")"
---
stderr:
Error: Parse error
   ╭─[<unknown>:2:12]
   │
 2 │         var a = var b;
   │                 ─┬─  
   │                  ╰─── Expected primary
───╯


