src/compiler/parse/snapshots/rlox__compiler__parse__parser__errors__invalid_lvalue.snap
---
source: src/compiler/parse/parser.rs
expression: "crate::common::test_util::mock_parse(\"\n        a * b = c + d;\n        \")"
---
stderr:
Error: Parse error
   ╭─[<unknown>:2:12]
   │
 2 │         a * b = c + d;
   │               ┬  
   │               ╰── Invalid assignment at this expression depth
───╯


