src/compiler/parse/snapshots/rlox__compiler__parse__parser__errors__invalid_place.snap
---
source: src/compiler/parse/parser.rs
expression: "crate::common::test_util::mock_parse(\"\n        1 = 1;\n        \")"
---
stderr:
Error: 
   ╭─[<unknown>:2:12]
   │
 2 │         1 = 1;
   │         ┬ ┬  
   │         ╰──── This statement should be terminated with ;
   │           │  
   │           ╰── Expected ;
───╯


