src/compiler/parse/snapshots/rlox__compiler__parse__parser__errors__invalid_token.snap
---
source: src/compiler/parse/parser.rs
expression: "crate::common::test_util::mock_parse(\"print $;\")"
---
stderr:
Error: Lexing error
   ╭─[<unknown>:?:?]
   │
 1 │ print $;
   │       ┬  
   │       ╰── Invalid token
───╯


