src/compiler/parse/snapshots/rlox__compiler__parse__parser__errors__missing_primary.snap
---
source: src/compiler/parse/parser.rs
expression: "crate::common::test_util::mock_parse(\"print ();\\n\")"
---
stderr:
Error: Parse error
   ╭─[<unknown>:?:?]
   │
 1 │ print ();
   │        ┬  
   │        ╰── Expected primary
───╯


